--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -21,10 +21,61 @@
     text-wrap: balance;
   }
 }
+#progress {
+  position: fixed;
+  top: 20px;
+  left: 20px;
+  transform: rotate(-90deg);
+}
 
+circle {
+  stroke-dashoffset: 0;
+  stroke-width: 15%;
+  fill: none;
+}
+
+.bg {
+  stroke: var(--accent);
+  opacity: 0.3;
+}
+
+#progress .indicator {
+  stroke: var(--accent);
+}
 .red-text {
   color: red;
 }
 .aboutMetext-p {
   text-align: justify;
+}
+.scroll-container {
+  display: flex;
+
+  height: 250px;
+  overflow-x: scroll;
+  padding: 20px 0;
+  margin: 0 auto;
+}
+::-webkit-scrollbar {
+  height: 5px;
+  width: 5px;
+  background: #fff3;
+  -webkit-border-radius: 1ex;
+}
+
+::-webkit-scrollbar-thumb {
+  background: var(--accent);
+  -webkit-border-radius: 1ex;
+}
+
+::-webkit-scrollbar-corner {
+  background: #fff3;
+}
+.scrollPerCon {
+  flex: 0 0 180px;
+  background: var(--accent);
+  margin: 0 20px 0 0;
+}
+.scrollPerCon:last-of-type {
+  margin: 0;
 }
